--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div id="top-menu">
+  <%= link_to 'Register', register_path %>
+</div>
 <%= yield %>
 
 </body>
