--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,6 @@
 <div class="book">
   <h1><%= @book.title %></h1>
   <p><%= link_to 'edit', edit_book_path(@book) %></p>
+  <p><%= link_to 'delete', @book, method: :delete %></p>
+
 </div>
